--- a/app/package.json
+++ b/app/package.json
@@ -12,9 +12,11 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "eslint-config-react-app": "6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
