--- a/app/package.json
+++ b/app/package.json
@@ -16,8 +16,10 @@
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "eslint-config-react-app": "6",
+    "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.3",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
