--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
+    "babel-plugin-react-html-attrs": "^3.0.5",
     "chart.js": "^3.8.0",
     "eslint-config-react-app": "6",
     "firebase": "^9.8.2",
