--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
+    "@metamask/providers": "^9.0.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -17,6 +18,7 @@
     "babel-plugin-react-html-attrs": "^3.0.5",
     "chart.js": "^3.8.0",
     "eslint-config-react-app": "6",
+    "ethers": "^5.6.8",
     "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -26,6 +28,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
